# rules_haskell

./: WORKSPACE
.github/workflows/: workflow.yaml
haskell/: BUILD.bazel  c2hs.bzl  cabal.bzl  cabal_wrapper.bzl  cc.bzl  ghc.BUILD.tpl  ghc_bindist.bzl  haddock.bzl  nixpkgs.bzl  repl.bzl  repositories.bzl  toolchain.bzl
haskell/asterius/: BUILD.bazel  asterius.bzl  asterius_repositories.bzl  asterius_workspace_rules.bzl  package.json
haskell/private/: dict.bzl  ghc_wrapper.sh  packages.bzl  pkgdb_to_bzl.py
haskell/private/actions/: compile.bzl
tests/asterius_binary/: BUILD
tests/asterius_bundle/: BUILD.bazel
