load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

webpack(
    name = "webpack",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "asterius",
    srcs = ["asterius_workspace_rules.bzl"],
    visibility = ["//haskell:__pkg__"],
)

exports_files(["asterius_webpack_config.js.tpl"])
